--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,17 +1,19 @@
 .header {
-    height: 65px;
-    box-shadow: 0px 2px 3px 0px #e5e2e2;
+  display: flex;
+  font-size: 1.5em;
+  height: 65px;
+  box-shadow: 0px 2px 3px 0px #e5e2e2;
 }
 .list {
-    display: flex;
-    list-style: none;
-    gap: 20px;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  list-style: none;
+  gap: 20px;
+  align-items: center;
+  height: 100%;
 }
 .link {
-    text-decoration: none;
+  text-decoration: none;
 }
 .main {
-    padding: 20px 0;
+  padding: 20px 0;
 }
