--- a/src/pages/Movies/Movies.module.css
+++ b/src/pages/Movies/Movies.module.css
@@ -1,5 +1,11 @@
 .form button {
-  margin-left: 10px;
+  margin: 15px;
+  width: 90px;
+  border: 1px solid;
+  padding: 5px;
+  background-color: #0000ee;
+  color: white;
+  border-radius: 4px;
 }
 
 .list {
